--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"author": {
 		"name": "J.Wang",
 		"email": "upidea@gmail.com",
-		"url": ""
+		"url": "https://github.com/upidea/"
 	},
 	"main": "./src/extension",
     "engines": {
@@ -20,7 +20,11 @@
     },
     "categories": [
         "Other"
-    ],
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/upidea/nodor.git"
+	},
     "activationEvents": [
         "onCommand:nodor.insertYesterday"
     ],
@@ -28,7 +32,7 @@
 		"commands": [
 			{
 				"command": "nodor.insertYesterday",
-				"title": "Insert YESTERDAY string as configed format."
+				"title": "Insert YESTERDAY string as configured format."
 			}
 		],
 		"configuration": {
@@ -52,8 +56,7 @@
     },
     "icon": "images/icon.png",    
     "scripts": {
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
+        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
